Squish p and pre to fix solr metadata display

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 /**
  * @file
  * Styles are organized using the SMACSS technique. @see http://smacss.com/book/
@@ -193,7 +193,7 @@ a:hover {
 /* line 181, ../sass/_normalize.scss */
 p,
 pre {
-  margin: 1.5em 0;
+  margin: 0 0 .5em 0;
 }
 
 /* line 184, ../sass/_normalize.scss */
@@ -2375,12 +2375,14 @@ tr.selected td {
 
 /* line 126, ../sass/components/_islandora.scss */
 #block-islandora-solr-basic-facets .islandora-solr-facet-wrapper h3 {
-  margin: 0 0 0.5em;
+  margin: 0 0 1.5em;
+  font-size: 135%;
 }
 /* line 129, ../sass/components/_islandora.scss */
 #block-islandora-solr-basic-facets .islandora-solr-facet-wrapper ul {
   list-style: none;
   padding: 0;
+  margin-top: -1.5em;
 }
 /* line 133, ../sass/components/_islandora.scss */
 #block-islandora-solr-basic-facets .islandora-solr-facet-wrapper .plusminus {
@@ -2390,6 +2392,7 @@ tr.selected td {
 #block-islandora-solr-basic-facets .islandora-solr-facet-wrapper a.soft-limit {
   display: block;
   margin-bottom: 2.75em;
+  margin-top: -1em;
   font-family: 'Ropa Sans';
   font-style: italic;
   text-decoration: none;
